--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a href="#">Releases</a>
             </li>
             <li>
-                <a href="#">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </li>
         </ul>
     </nav>
